src/test/ui/nll/user-annotations/pattern_substs_on_tuple_struct.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/pattern_substs_on_tuple_struct.rs:7:19
   |
LL |     let foo = Foo(&y);
   |                   ^^ borrowed value does not live long enough
...
LL | }
   | - `y` dropped here while still borrowed
   |
   = note: borrowed value must be valid for the static lifetime...

error[E0597]: `y` does not live long enough
  --> $DIR/pattern_substs_on_tuple_struct.rs:14:19
   |
LL |     let foo = Foo(&y);
   |                   ^^ borrowed value does not live long enough
...
LL | }
   | - `y` dropped here while still borrowed
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
